Fix VP rendering bug when the number overflows to the next row

--- a/src/card/DragonCard.css
+++ b/src/card/DragonCard.css
@@ -220,8 +220,8 @@
 
 .vp-span .text-icon {
     position: absolute;
-    top: 0.15em;
-    left: -0.1em;
+    top: 0.13em;
+    left: -0.03em;
     width: 1.2em;
     height: 1.2em;
     margin-bottom: -0.1em;
